// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearRefinements should render <ClearRefinements /> 1`] = `
<div
  className="root"
>
  <button
    className="button"
    dangerouslySetInnerHTML={
      {
        "__html": "",
      }
    }
    disabled={false}
    onClick={[Function]}
  />
</div>
`;

exports[`ClearRefinements should render <ClearRefinements /> with a specific class when no refinements 1`] = `
<div
  className="root"
>
  <button
    className="button disabled"
    dangerouslySetInnerHTML={
      {
        "__html": "",
      }
    }
    disabled={true}
    onClick={[Function]}
  />
</div>
`;
